--- a/profile.html
+++ b/profile.html
@@ -5,17 +5,6 @@
   <title>Profile – ClubSocial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="styles.css" rel="stylesheet" />
-  <style>
-    .wrap{max-width:1200px;margin:0 auto;padding:18px 16px 64px}
-    .grid{display:grid;grid-template-columns:repeat(6,1fr);gap:12px}
-    .tile{background:var(--card);border:1px solid rgba(255,255,255,.06);border-radius:14px;padding:12px;text-align:center;box-shadow:var(--glow)}
-    .tile .pic{width:96px;height:96px;border-radius:50%;margin:8px auto;background:#20243a;background-size:cover;background-position:center;outline:2px solid rgba(255,255,255,.1)}
-    .tile .own{font-size:12px;color:var(--muted);margin-top:6px}
-    .tile button{margin-top:8px;padding:8px 12px;border-radius:10px;border:1px solid rgba(255,255,255,.1);background:var(--panel-2);color:#fff;cursor:pointer}
-    .row{display:flex;gap:12px;flex-wrap:wrap;align-items:center}
-    .input{background:var(--panel-2);border:1px solid rgba(255,255,255,.08);border-radius:10px;padding:10px 12px;color:#fff;min-width:220px}
-    .muted{color:var(--muted)}
-  </style>
 </head>
 <body>
   <header class="topbar">
@@ -35,17 +24,27 @@
     </nav>
   </header>
 
-  <main class="wrap">
+  <main class="page">
     <h1 style="margin:0 0 10px">Your Profile</h1>
-    <div class="row">
-      <div class="avatar" id="profileAvatar" style="width:72px;height:72px;"></div>
-      <div>
-        <div class="muted">Screen name</div>
-        <div class="row">
-          <input id="nameInput" class="input" placeholder="Your name">
-          <button class="pill" id="saveNameBtn">Save</button>
+
+    <div class="section">
+      <div class="section-head"><h3>Account</h3></div>
+      <div class="cards-row">
+        <div class="card" style="padding:16px;max-width:520px">
+          <div class="row" style="display:flex;gap:12px;align-items:center">
+            <div class="avatar" id="profileAvatar" style="width:72px;height:72px;"></div>
+            <div style="flex:1">
+              <div class="muted">Screen name</div>
+              <div class="row" style="display:flex;gap:8px;flex-wrap:wrap">
+                <input id="nameInput" class="input" placeholder="Your name"
+                       style="background:var(--panel-2);border:1px solid rgba(255,255,255,.08);border-radius:10px;padding:10px 12px;color:#fff;min-width:220px">
+                <button class="pill" id="saveNameBtn">Save</button>
+                <button class="pill" id="logoutBtn" style="background:#2a2f4a;border:1px solid rgba(255,255,255,.15)">Log out</button>
+              </div>
+              <div class="muted" id="nameHint" style="margin-top:6px"></div>
+            </div>
+          </div>
         </div>
-        <div class="muted" id="nameHint"></div>
       </div>
     </div>
 
@@ -60,6 +59,7 @@
 
   <footer class="site-footer">© <span id="year"></span> TerpzyVerse / ClubSocial</footer>
 
+  <script src="auth.js"></script>
   <script src="app.js"></script>
   <script src="profile.js"></script>
 </body>
